<package format="2">
  <name>rqt_gui_py</name>
  <version>1.10.0</version>
  <description>rqt_gui_py enables GUI plugins to use the Python client library for ROS.</description>

  <maintainer email="dharini@openrobotics.org">Dharini Dutia</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rqt_gui_py</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Dirk Thomas</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>

  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend version_gte="0.3.0">qt_gui</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend version_gte="0.3.0">rqt_gui</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <build_type>ament_python</build_type>
  </export>
</package>
